working on fixing container and content alignment

--- a/src/DictionarySearch/DictionarySearch.css
+++ b/src/DictionarySearch/DictionarySearch.css
@@ -3,7 +3,7 @@
   justify-content: center;
 }
 
-input.form-control {
+input.form-control .search-input {
   width: auto;
 }
 .search-side {
